1.3.4 tbd

  * Better sharing support (via intent/account manager)

1.3.3 22/06/11

  * non-expiry token
  * always enable seeking for SDK > 8
  * fixed memory leak in FollowStatus
  * fixed wrong path in TrackCache
  * reduced memory footprint by deserializer to smaller objects

1.3.2 16/06/11

  * Friend finder

1.3.1 07/06/11

  * Maintenance update

1.3.0 01/06/11

  * Native login + signup, also via facebook
  * Recover password
  * new Java API wrapper, migrated app to OAuth2
  * Save recordings & upload them later
  * Support for tumblr

1.2.1 17/04/11

  * Maintenance update

1.2.0 10/04/11

  * Foursquare integration
  * In-app commenting
  * 3rd party uplaods
  * Support for AAC encoding (2.3.3 only)

1.1.6 03/02/11

  * New streaming framework