@@ -626,6 +626,7 @@
   <string name="menu_view_current_track">View Player</string>
   <string name="menu_cancel_current_upload">Cancel Upload</string>
   <string name="menu_refresh">Refresh</string>
+  <string name="menu_upload_file">Upload file</string>
   <string name="menu_incoming">Incoming</string>
   <string name="menu_friend_finder">Find Friends</string>
 
